# Camera-app-with-Qt-and-Opencv

./: CMakeLists.txt  README.md
